# bridge-convention-app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.api  README.md  TESTING.md  backend-architecture.html  docker-compose.yml  eslint.config.js  index.html  knip.json  module-coupling-analysis.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.cli.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
crates/bridge-api/: Cargo.toml
crates/bridge-api/migrations/: 002_subscriptions.sql  003_stripe_events.sql  004_user_drills.down.sql  004_user_drills.sql
crates/bridge-api/src/: config.rs  error.rs  lib.rs  main.rs  test_support.rs
crates/bridge-api/src/auth/: handlers.rs  mod.rs  models.rs  oauth.rs  session.rs
crates/bridge-api/src/billing/: entitlements.rs  handlers.rs  mod.rs  stripe_client.rs
crates/bridge-api/src/conventions/: handlers.rs  mod.rs
crates/bridge-api/src/dev/: mod.rs
crates/bridge-api/src/drills/: entitlement.rs  handlers.rs  mod.rs  models.rs  repository.rs
crates/bridge-api/src/user/: mod.rs
crates/bridge-api/tests/: drill_lifecycle.rs  entitlement_parity.rs  webhook_flow.rs
crates/bridge-conventions/: Cargo.toml
crates/bridge-conventions/fixtures/: bergen-bundle.json  bundle-manifests.json  dont-bundle.json  michaels-unusual-bundle.json  negative-doubles-bundle.json  nmf-bundle.json  nt-bundle.json  nt-stayman.json  nt-transfers.json  strong-2c-bundle.json  weak-twos-bundle.json
crates/bridge-conventions/fixtures/modules/: bergen.json  bergen.wave2b-reference-deferred.md  blackwood.json  dont.json  dont.variant-notes.md  jacoby-4way.json  jacoby-transfers.json  michaels-unusual.json  michaels-unusual.wave2b-reference-deferred.md  natural-bids.json  natural-competitive.json  negative-doubles.json  new-minor-forcing.json  new-minor-forcing.wave2b-reference-deferred.md  smolen.json  stayman-garbage.json  stayman.json  strong-2c.json  weak-twos.json  weak-twos.wave2b-reference-deferred.md
crates/bridge-conventions/fixtures/pipeline/: bergen-bundle.json  dont-bundle.json  jacoby-transfers-bundle.json  nt-stayman.json  nt-transfers.json  stayman-bundle.json  weak-twos-bundle.json
crates/bridge-conventions/src/: lib.rs
crates/bridge-conventions/src/adapter/: mod.rs  practical_scorer.rs  protocol_adapter.rs  strategy_evaluation.rs  tree_evaluation.rs
crates/bridge-conventions/src/fact_catalog/: mod.rs
crates/bridge-conventions/src/fact_dsl/: bridge_derived.rs  composition.rs  evaluator.rs  inversion.rs  mod.rs  point_helpers.rs  primitives.rs  system_facts.rs  topo_sort.rs  types.rs  witness.rs
crates/bridge-conventions/src/fact_dsl/rust_compositions/: dont.rs  helpers.rs  mod.rs  transfers.rs  weak_two.rs
crates/bridge-conventions/src/pipeline/: evidence_bundle.rs  mod.rs  run_pipeline.rs  types.rs
crates/bridge-conventions/src/pipeline/evaluation/: alert.rs  arbitration_helpers.rs  clause_derivation.rs  meaning_arbitrator.rs  meaning_evaluator.rs  mod.rs  provenance.rs  specificity_deriver.rs  types.rs
crates/bridge-conventions/src/pipeline/observation/: local_fsm.rs  mod.rs  negotiation_extractor.rs  negotiation_matcher.rs  normalize_intent.rs  public_commitments.rs  route_matcher.rs  rule_interpreter.rs
crates/bridge-conventions/src/registry/: bundle_registry.rs  mod.rs  module_registry.rs  spec_builder.rs  system_configs.rs
crates/bridge-conventions/src/teaching/: mod.rs  parse_tree_builder.rs  projection_builder.rs  teaching_types.rs
crates/bridge-conventions/src/types/: agreement.rs  authored_text.rs  bid_action.rs  bundle_types.rs  fact_id.rs  fact_types.rs  meaning.rs  mod.rs  module_types.rs  rule_types.rs  system_config.rs
crates/bridge-conventions/tests/: bidding_context_consistency.rs  canary_authority.rs  composition_guard.rs  derivation_semantics.rs  golden_master.rs  pipeline_golden_master.rs  reference_prose_invariants.rs  structural_invariants.rs  witness_derivation.rs
crates/bridge-static/: CLAUDE.md  Cargo.toml
crates/bridge-static/src/: main.rs
crates/bridge-wasm/: Cargo.toml
crates/bridge-wasm/src/: lib.rs
src-tauri/crates/bridge-api/: Cargo.toml
src-tauri/crates/bridge-api/migrations/: 001_initial.sql
src-tauri/crates/bridge-api/src/: db.rs
src-tauri/crates/bridge-api/src/auth/: handlers.rs  mod.rs  oauth.rs  session.rs
src-tauri/crates/bridge-service/: Cargo.toml
src-tauri/crates/bridge-service/src/: bundle_resolver.rs  config_resolver.rs  config_schema_types.rs  convention_adapter.rs  drill_setup.rs  error.rs  feedback_assembler.rs  lib.rs  observation_log_builder.rs  port.rs  request_types.rs  response_types.rs  service_impl.rs  session_manager.rs  strategy_pipeline.rs  validation.rs
src-tauri/crates/bridge-service/src/evaluation/: mod.rs  types.rs
src-tauri/crates/bridge-service/tests/: convention_pipeline_red.rs  service_contracts_red.rs
src-tauri/crates/bridge-session/: Cargo.toml
src-tauri/crates/bridge-session/src/: lib.rs  phase_coordinator.rs  phase_machine.rs  types.rs
src-tauri/crates/bridge-session/src/dds/: evaluation.rs  pbn.rs  sampling.rs
src-tauri/crates/bridge-session/src/heuristics/: heuristic_play.rs  mod.rs  natural_fallback.rs  opening_leads.rs  pass_strategy.rs  play_profiles.rs  play_types.rs  pragmatic_strategy.rs  random_play.rs  strategy_chain.rs
src-tauri/crates/bridge-session/src/inference/: annotation_producer.rs  belief_accumulator.rs  derive_beliefs.rs  inference_coordinator.rs  inference_engine.rs  mod.rs  natural_inference.rs  posterior.rs  private_belief.rs  types.rs
src-tauri/crates/bridge-session/src/session/: bid_feedback_builder.rs  bidding_controller.rs  build_viewport.rs  clause_mapper.rs  condition_caps.rs  config_factory.rs  drill_session.rs  flow_tree_builder.rs  (+8 more)
src-tauri/crates/bridge-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/bridge-tauri/capabilities/: default.json
src-tauri/crates/bridge-tauri/icons/: icon.icns
src-tauri/crates/bridge-tauri/src/: commands.rs  lib.rs  main.rs  service_commands.rs
(+2127 files in other folders)
