[package]
name = "bridge-static"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge-static"
path = "src/main.rs"

[dependencies]
bridge-conventions = { path = "../bridge-conventions" }
bridge-session = { path = "../bridge-session" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
