[package]
name = "bridge-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bridge-engine = { path = "../bridge-engine" }
bridge-conventions = { path = "../bridge-conventions" }
bridge-session = { path = "../bridge-session" }
bridge-service = { path = "../bridge-service" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
tracing = "0.1"
tracing-wasm = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
