[package]
name = "bridge-service"
version = "0.1.0"
edition = "2021"
description = "Service layer implementing ServicePort — thin hexagonal port between UI/CLI and game logic"

[dependencies]
bridge-engine = { path = "../bridge-engine" }
bridge-conventions = { path = "../bridge-conventions" }
bridge-session = { path = "../bridge-session" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
