[package]
name = "bridge-session"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge-engine = { path = "../bridge-engine" }
bridge-conventions = { path = "../bridge-conventions" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
