[package]
name = "bridge-tauri"
version = "0.1.0"
edition = "2021"

[features]
default = ["dds"]
dds = ["bridge-engine/dds"]

[dependencies]
bridge-engine = { path = "../bridge-engine" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
